# citadel-sample

./: .gitignore  citadel-sample-game.cpp  linux_test.sh
projects/: glext.h
projects/android/: build.gradle
projects/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
projects/android/app/src/androidTest/java/com/bastiongames/citadelsample/: ExampleInstrumentedTest.java
projects/android/app/src/main/: AndroidManifest.xml
projects/android/app/src/main/cpp/: main.cpp
projects/android/app/src/main/java/com/bastiongames/citadelsample/: CitadelActivity.java
projects/android/app/src/main/res/values/: strings.xml
projects/android/app/src/test/java/com/bastiongames/citadelsample/: ExampleUnitTest.java
projects/android/gradle/wrapper/: gradle-wrapper.properties
projects/linux/: CMakeLists.txt
projects/win32/: citadel-sample.sln  citadel-sample.vcxproj  citadel-sample.vcxproj.filters
